tests/snapshots/plan_dag_rewrite_golden__plan_rewrite_complex_mixed.snap
---
source: tests/plan_dag_rewrite_golden.rs
expression: golden
---
{
  "scenario": "complex_mixed",
  "input_metadata": {
    "node_count": 8,
    "root_node": 7,
    "node_types": [
      "join",
      "leaf",
      "race",
      "timeout"
    ],
    "max_depth": 3,
    "description": "Complex plan with timeout, race, joins - multiple rewrite opportunities"
  },
  "rewrite_policy": {
    "policy_name": "custom_selective",
    "associativity": false,
    "commutativity": true,
    "distributivity": false,
    "require_binary_joins": true,
    "timeout_simplification": true
  },
  "transformation_result": {
    "input_plan": {
      "root": 7,
      "nodes": [
        {
          "id": 0,
          "node_type": "leaf",
          "details": {
            "label": "task_a"
          }
        },
        {
          "id": 1,
          "node_type": "leaf",
          "details": {
            "label": "task_b"
          }
        },
        {
          "id": 2,
          "node_type": "leaf",
          "details": {
            "label": "task_c"
          }
        },
        {
          "id": 3,
          "node_type": "leaf",
          "details": {
            "label": "task_d"
          }
        },
        {
          "id": 4,
          "node_type": "join",
          "details": {
            "children": [
              0,
              1
            ]
          }
        },
        {
          "id": 5,
          "node_type": "join",
          "details": {
            "children": [
              2,
              3
            ]
          }
        },
        {
          "id": 6,
          "node_type": "race",
          "details": {
            "children": [
              5,
              4
            ]
          }
        },
        {
          "id": 7,
          "node_type": "timeout",
          "details": {
            "child": 6,
            "duration_ms": 1000
          }
        }
      ],
      "canonical_form": "Timeout(1000ms, Race[Join[task_c,task_d],Join[task_a,task_b]])"
    },
    "output_plan": {
      "root": 7,
      "nodes": [
        {
          "id": 0,
          "node_type": "leaf",
          "details": {
            "label": "task_a"
          }
        },
        {
          "id": 1,
          "node_type": "leaf",
          "details": {
            "label": "task_b"
          }
        },
        {
          "id": 2,
          "node_type": "leaf",
          "details": {
            "label": "task_c"
          }
        },
        {
          "id": 3,
          "node_type": "leaf",
          "details": {
            "label": "task_d"
          }
        },
        {
          "id": 4,
          "node_type": "join",
          "details": {
            "children": [
              0,
              1
            ]
          }
        },
        {
          "id": 5,
          "node_type": "join",
          "details": {
            "children": [
              2,
              3
            ]
          }
        },
        {
          "id": 6,
          "node_type": "race",
          "details": {
            "children": [
              5,
              4
            ]
          }
        },
        {
          "id": 7,
          "node_type": "timeout",
          "details": {
            "child": 8,
            "duration_ms": 1000
          }
        },
        {
          "id": 8,
          "node_type": "race",
          "details": {
            "children": [
              4,
              5
            ]
          }
        }
      ],
      "canonical_form": "Timeout(1000ms, Race[Join[task_a,task_b],Join[task_c,task_d]])"
    },
    "applicable_rules": [
      "JoinCommute",
      "RaceCommute"
    ],
    "rules_applied": [
      "RaceCommute"
    ],
    "transformed": true,
    "transformation_steps": [
      {
        "rule": "RaceCommute",
        "target_nodes": [
          6,
          8
        ],
        "before": "Race[Join[task_c,task_d],Join[task_a,task_b]]",
        "after": "Race[Join[task_a,task_b],Join[task_c,task_d]]"
      }
    ]
  }
}
