tests/snapshots/plan_dag_rewrite_golden__plan_rewrite_race_commutativity.snap
---
source: tests/plan_dag_rewrite_golden.rs
expression: golden
---
{
  "scenario": "race_commutativity",
  "input_metadata": {
    "node_count": 4,
    "root_node": 3,
    "node_types": [
      "leaf",
      "race"
    ],
    "max_depth": 1,
    "description": "Race with unordered children - tests commutativity rewrite"
  },
  "rewrite_policy": {
    "policy_name": "assume_all",
    "associativity": true,
    "commutativity": true,
    "distributivity": true,
    "require_binary_joins": false,
    "timeout_simplification": true
  },
  "transformation_result": {
    "input_plan": {
      "root": 3,
      "nodes": [
        {
          "id": 0,
          "node_type": "leaf",
          "details": {
            "label": "task_a"
          }
        },
        {
          "id": 1,
          "node_type": "leaf",
          "details": {
            "label": "task_b"
          }
        },
        {
          "id": 2,
          "node_type": "leaf",
          "details": {
            "label": "task_c"
          }
        },
        {
          "id": 3,
          "node_type": "race",
          "details": {
            "children": [
              2,
              0,
              1
            ]
          }
        }
      ],
      "canonical_form": "Race[task_c,task_a,task_b]"
    },
    "output_plan": {
      "root": 4,
      "nodes": [
        {
          "id": 0,
          "node_type": "leaf",
          "details": {
            "label": "task_a"
          }
        },
        {
          "id": 1,
          "node_type": "leaf",
          "details": {
            "label": "task_b"
          }
        },
        {
          "id": 2,
          "node_type": "leaf",
          "details": {
            "label": "task_c"
          }
        },
        {
          "id": 3,
          "node_type": "race",
          "details": {
            "children": [
              2,
              0,
              1
            ]
          }
        },
        {
          "id": 4,
          "node_type": "race",
          "details": {
            "children": [
              0,
              1,
              2
            ]
          }
        }
      ],
      "canonical_form": "Race[task_a,task_b,task_c]"
    },
    "applicable_rules": [
      "RaceCommute"
    ],
    "rules_applied": [
      "RaceCommute"
    ],
    "transformed": true,
    "transformation_steps": [
      {
        "rule": "RaceCommute",
        "target_nodes": [
          3,
          4
        ],
        "before": "Race[task_c,task_a,task_b]",
        "after": "Race[task_a,task_b,task_c]"
      }
    ]
  }
}
